Pag locatie si nu merge aia cu pozele

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Event_PlannerContext": "Server=(localdb)\\mssqllocaldb;Database=Event_Planner.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
